# langquest

./: .gitignore  Cargo.toml  LICENSE  README.md  cliff.toml  justfile
.github/workflows/: ci.yml  release.yml
img/: lq-demo.cast
ripes/macos/Ripes.app/Contents/: Info.plist
ripes/macos/Ripes.app/Contents/Frameworks/QtSvg.framework/: QtSvg
ripes/macos/Ripes.app/Contents/PlugIns/iconengines/: libqsvgicon.dylib
ripes/macos/Ripes.app/Contents/PlugIns/imageformats/: libqgif.dylib  libqico.dylib  libqjpeg.dylib
ripes/macos/Ripes.app/Contents/Resources/: logo.icns
src/: app.rs  config.rs  error.rs  exercise.rs  lib.rs  main.rs  runner.rs
src/ui/: about.md  about.rs  cache.rs  exercise_view.rs  markdown.rs  mod.rs  overview.rs  statusbar.rs  table.rs  term_caps.rs
tests/: integration.rs
tests/sample-repo/: lq.toml
tests/sample-repo/01-rust/01-hello-world/: 01-theory.md  02-task.md  main.rs
tests/sample-repo/01-rust/01-hello-world/solution/: main.rs  solution.md
tests/sample-repo/02-python/01-hello/: 01-theory.md  02-task.md  main.py
tests/sample-repo/02-python/01-hello/solution/: main.py  solution.md
tests/sample-repo/03-riscv/01-hello-riscv/: 01-theory.md  02-task.md  main.asm
tests/sample-repo/03-riscv/01-hello-riscv/solution/: main.asm  solution.md
tests/sample-repo/04-go/01-hello-world/: 01-theory.md  02-task.md  go.mod  main.go  main_test.go
tests/sample-repo/04-go/01-hello-world/solution/: main.go  solution.md
tests/sample-repo/05-markdown/01-rust-ownership/: 01-theory.md  02-task.md  main.md
tests/sample-repo/05-markdown/01-rust-ownership/solution/: main.md  solution.md
(+6 files in other folders)
