[package]
name = "lq"
version = "0.1.0"
edition = "2024"
authors = ["tschinz"]
license = "MIT"
description = "A terminal-based, interactive programming exercise runner and learning tool for Rust, Go, Python, RiscV and Markdown"
readme = "README.md"
repository = "https://github.com/tschinz/langquest"
categories = ["command-line-utilities", "development-tools"]
keywords = ["learning", "exercise", "interactive", "runner"]
exclude = [
  ".github",
  "tasks",
  "claude.md",
]

[lib]
name = "lq"
path = "src/lib.rs"

[[bin]]
name = "lq"
path = "src/main.rs"

[dependencies]
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
notify = "7"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
anyhow = "1"
thiserror = "2"
pulldown-cmark = "0.12"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }
